Add store to example

--- a/hello.html
+++ b/hello.html
@@ -23,7 +23,7 @@
 <body>
 
 <h1>Hello World Window</h1>
-<p>This example shows how to create a very simple Window with ExtJS 3.4.</p>
+<p>This example shows how to create a very simple ExtJS 3.4 app.</p>
 
 
 </body>
