--- a/hello.html
+++ b/hello.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1">
-    <title>Hello World Window Example</title>
+    <title>Sample ExtJS application</title>
     <link rel="stylesheet" type="text/css" href="resources/css/ext-all.css" />
     <!-- LIBS -->
     <script type="text/javascript" src="adapter/ext/ext-base.js"></script>
@@ -22,7 +22,7 @@
 </head>
 <body>
 
-<h1>Hello World Window</h1>
+<h1>Sample ExtJS</h1>
 <p>This example shows how to create a very simple ExtJS 3.4 app.</p>
 
 
