--- a/demo.html
+++ b/demo.html
@@ -9,7 +9,7 @@
     <!-- ENDLIBS -->
     <script type="text/javascript" src="extjs/ext-all.js"></script>
 	
-    <script language="javascript" src="helloapp.js"></script>
+    <script language="javascript" src="demoapp.js"></script>
 
 	<!-- Common Styles -->
 	<link rel="stylesheet" type="text/css" href="resources/css/examples.css" />
@@ -22,7 +22,7 @@
 </head>
 <body>
 
-<h1>Sample ExtJS</h1>
+<h1>ExtJSDemo</h1>
 <p>This example shows how to create a very simple ExtJS 3.4 app.</p>
 
 
